# goongine

./: .gitignore  CMakeLists.txt  README.md  compile_libs.sh  current_work.txt
.cache/clangd/index/: engine_main.cpp.3A17091815349827.idx  engine_main.hpp.975FAF48B1C10D62.idx  engine_variable_definitions.hpp.84ADFFC570619A76.idx  glew.c.80FFF59B6B885630.idx  glew.h.09AB1E4944486C8D.idx  glfw3.h.ECF2A34BE678CBA0.idx  main.cpp.6F8639D052D2D1A2.idx  window.cpp.6930C1272E791FF5.idx
assets/shaders/: basic.frag
include/engine/: engine_main.hpp  engine_variable_definitions.hpp
include/engine/lua_embed/: lua_embed_main.hpp
include/engine/renderer/: camera.hpp  shader.hpp
libs/Lua/lib/: libluajit-5.1.so.2.1.1753364724
libs/Lua/lib/pkgconfig/: luajit.pc
libs/glad/lib/include/glad/: gl.h
libs/glew/: glew.pc
src/: engine_main.cpp  main.cpp
src/GL/: glew.c
src/engine/renderer/: shader.cpp
src/game/: main.cpp
